# polymarket-analytics-pipeline

./: README.md  pyproject.toml
.github/workflows/: ingest.yml
src/: api_client.py  database.py  main.py  transformers.py
