[project]
name = "polydash-etl"
version = "0.1.0"
description = "etl for polydash app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "plotly>=6.3.1",
    "psycopg2>=2.9.11",
    "python-telegram-bot>=22.4",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "tweepy>=4.16.0",
]
